# Genposter_v3

./: .env.example  .gitignore  .npmrc  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
apps/desktop/: audit-data.cjs  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.tsx  api.ts  main.tsx  styles.css  theme.css  theme.ts  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
data/: mapping.yaml
data/brand/fonts/: README.md
data/database/: fnb_dalat.xlsx
deploy/: README.md  backup.sh  brand-base.mjs  check-cors.mjs  check-server.mjs  check-sync-api.mjs  docker-compose.yml  import-to-nocodb.mjs  lock-signup.mjs  provision-lan.sh  setup-nocodb.mjs  verify-import.mjs
docs/: architecture.md
docs/superpowers/plans/: 2026-06-24-editor-layout-fonts.md  2026-06-24-trang-tong-nhieu-trang.md  2026-07-01-produce-khuon-random-fill.md
docs/superpowers/specs/: 2026-06-24-autosave-sidebar-design.md  2026-06-24-canva-text-context-bar-design.md  2026-06-24-context-bar-text-fix-design.md  2026-06-24-copy-paste-data-groups-design.md  2026-06-24-editor-layout-fonts-design.md  (+3 more)
recipes/: todo_list_an_toi.yaml
scripts/: dev-all.mjs  fetch-brand-fonts.mjs  gen-icon.mjs  smoke.mjs  start-sidecars.mjs
services/data-api/: requirements.txt  run.py
services/render/: package.json  tsconfig.json
templates/: M_u_m_i_1.json  to_do_list_an_toi_v1.json
(+97 files in other folders)
